Refine analysis code and clean notebook

--- a/caffeine_analysis.ipynb
+++ b/caffeine_analysis.ipynb
@@ -622,12 +622,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#match math and reaction tests with the day of coffee consumption\n",
     "coffee[\"coffee_date_time\"] = pd.to_datetime(coffee[\"coffee_date_time\"])\n",
     "math[\"test_date_time\"] = pd.to_datetime(math[\"test_date_time\"])\n",
     "reaction[\"test_date_time\"] = pd.to_datetime(reaction[\"test_date_time\"])\n",
     "\n",
-    "#Create a day column (date only) for each data\n",
     "coffee[\"date\"] = coffee[\"coffee_date_time\"].dt.date\n",
     "math[\"date\"] = math[\"test_date_time\"].dt.date\n",
     "reaction[\"date\"] = reaction[\"test_date_time\"].dt.date"
@@ -761,8 +759,7 @@
     }
    ],
    "source": [
-    "# rebuild summary BEFORE fixing the reaction timestamp issue\n",
-    "#building a summary to turn the raw and separate data into more useful\n",
+    "# rebuild summary BEFORE fixing the reaction timestamp issue. building a summary to turn the raw and separate data into more useful\n",
     "pairs_before = []\n",
     "\n",
     "for idx, c in coffee.iterrows():\n",
@@ -770,23 +767,19 @@
     "    c_dt = c[\"coffee_date_time\"]\n",
     "    caffeine = c[\"Amount of Caffeine/mg\"]\n",
     "\n",
-    "    # Math tests on the same date\n",
     "    math_day = math[math[\"date\"] == c_date].sort_values(\"test_date_time\")\n",
     "\n",
-    "    # Reaction tests on the same date\n",
     "    reaction_day = reaction[reaction[\"date\"] == c_date].sort_values(\"test_date_time\")\n",
     "\n",
     "    if math_day.empty or reaction_day.empty:\n",
     "        continue\n",
     "\n",
-    "    # Math before and after\n",
     "    math_before = math_day[math_day[\"test_date_time\"] < c_dt]\n",
     "    math_after  = math_day[math_day[\"test_date_time\"] > c_dt]\n",
     "\n",
     "    math_before_row = math_before.iloc[-1] if not math_before.empty else None\n",
     "    math_after_row  = math_after.iloc[0]  if not math_after.empty else None\n",
     "\n",
-    "    # Reaction before and after\n",
     "    reaction_before = reaction_day[reaction_day[\"test_date_time\"] < c_dt]\n",
     "    reaction_after  = reaction_day[reaction_day[\"test_date_time\"] > c_dt]\n",
     "\n",
@@ -868,8 +861,7 @@
     }
    ],
    "source": [
-    "# original recorded timestamp of the reaction test\n",
-    "# that should conceptually be \"before\" the second coffee on day10\n",
+    "# original recorded timestamp of the reaction test that should conceptually be \"before\" the second coffee on day 10\n",
     "fix_ts = pd.to_datetime(\"2025-11-10 14:46:39\")\n",
     "\n",
     "mask = reaction[\"test_date_time\"] == fix_ts\n",
@@ -877,7 +869,6 @@
     "# shift this timestamp 60 seconds backwards so that it becomes before 14:46:00\n",
     "reaction.loc[mask, \"test_date_time\"] = reaction.loc[mask, \"test_date_time\"] - pd.Timedelta(seconds=60)\n",
     "\n",
-    "# check the modified row\n",
     "reaction[mask]\n"
    ]
   },
@@ -1240,16 +1231,11 @@
     "# Use the cleaned summary as the main analysis dataframe\n",
     "summary = summary_after.copy()\n",
     "\n",
-    "# Compute improvements (deltas)\n",
-    "# Positive values = improvement in performance\n",
     "\n",
-    "# Math response time (seconds): lower is better → before - after\n",
     "summary[\"delta_math_time_s\"] = summary[\"math_before_time_s\"] - summary[\"math_after_time_s\"]\n",
     "\n",
-    "# Math accuracy (%): higher is better → after - before\n",
     "summary[\"delta_math_acc\"] = summary[\"math_after_acc\"] - summary[\"math_before_acc\"]\n",
     "\n",
-    "# Reaction time (ms): lower is better → before - after\n",
     "summary[\"delta_reaction_ms\"] = summary[\"reaction_before_ms\"] - summary[\"reaction_after_ms\"]\n",
     "\n",
     "summary[[\n",
@@ -1351,7 +1337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 90,
    "id": "d431ce59-5b1f-4689-b437-8115b89fe216",
    "metadata": {},
    "outputs": [
@@ -1367,11 +1353,15 @@
     }
    ],
    "source": [
+    "from sklearn.linear_model import LinearRegression\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
     "plt.figure(figsize=(8,6))\n",
     "\n",
     "plt.scatter(summary[\"caffeine_mg\"], summary[\"delta_reaction_ms\"], color=\"blue\")\n",
     "\n",
-    "# Annotate each point with date and real clock time\n",
     "for i, row in summary.iterrows():\n",
     "    date_str = row[\"coffee_date_time\"].strftime(\"%y-%m-%d\")\n",
     "    time_str = row[\"coffee_date_time\"].strftime(\"%H:%M\")   # real clock format\n",
@@ -1395,7 +1385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 91,
    "id": "fdd59d40-feff-49fb-b832-3b107e68c0d0",
    "metadata": {},
    "outputs": [
@@ -1438,7 +1428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 92,
    "id": "36f95ccb-cd6a-4161-90cb-d65be0066dea",
    "metadata": {},
    "outputs": [
@@ -1481,7 +1471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 93,
    "id": "c694e051-dc1d-4b4e-b9c8-8a4bea810397",
    "metadata": {},
    "outputs": [
@@ -1505,11 +1495,6 @@
     }
    ],
    "source": [
-    "from sklearn.linear_model import LinearRegression\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
     "X = summary[[\"caffeine_mg\"]]\n",
     "y = summary[\"delta_reaction_ms\"]\n",
     "model = LinearRegression().fit(X, y)\n",
@@ -1534,7 +1519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 96,
    "id": "e54d018d-6d36-40b6-b3f8-a94df547b73d",
    "metadata": {},
    "outputs": [
@@ -1558,11 +1543,6 @@
     }
    ],
    "source": [
-    "from sklearn.linear_model import LinearRegression\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
     "X = summary[[\"caffeine_mg\"]]\n",
     "y = summary[\"delta_math_time_s\"]\n",
     "\n",
@@ -1588,7 +1568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 97,
    "id": "02cdb496-64d7-44bd-ae93-fe080a6229f3",
    "metadata": {},
    "outputs": [
@@ -1634,14 +1614,6 @@
     "print(\"Slope:\", model.coef_[0])\n",
     "print(\"Intercept:\", model.intercept_)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c83088f1-b451-4d52-9ba8-2dc3d6213655",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
