Fix data path to relative and make notebook reproducible

--- a/caffeine_analysis.ipynb
+++ b/caffeine_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "id": "f09b72cd-9d05-40a7-bba1-6106f3eac15c",
    "metadata": {},
    "outputs": [
@@ -57,8 +57,9 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "path = \"E:/Coffee-Analysis/data/\"\n",
+    "from pathlib import Path\n",
     "\n",
+    "path = Path(\"data\")\n",
     "coffee = pd.read_csv(path + \"coffee log.csv\")\n",
     "math = pd.read_csv(path + \"math test.csv\")\n",
     "reaction = pd.read_csv(path + \"reaction test.csv\")\n",
