--- a/caffeine_analysis.ipynb
+++ b/caffeine_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "f09b72cd-9d05-40a7-bba1-6106f3eac15c",
    "metadata": {},
    "outputs": [
@@ -50,16 +50,15 @@
        " 4  26      NaN            525  2025-11-10 08:23:30)"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "from pathlib import Path\n",
+    "path = \"E:/Coffee-Analysis/data/\"\n",
     "\n",
-    "path = Path(\"data\")\n",
     "coffee = pd.read_csv(path + \"coffee log.csv\")\n",
     "math = pd.read_csv(path + \"math test.csv\")\n",
     "reaction = pd.read_csv(path + \"reaction test.csv\")\n",
@@ -69,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 4,
    "id": "77844ee2-a205-42ab-8827-0e586fddc6a3",
    "metadata": {},
    "outputs": [
@@ -175,7 +174,7 @@
        "4 2025-11-03 12:00:00  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 5,
    "id": "d9d3f1e4-b450-4f10-9aff-c504163dc818",
    "metadata": {},
    "outputs": [
@@ -295,7 +294,7 @@
        "4 2025-11-03 12:00:00  "
       ]
      },
-     "execution_count": 52,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 6,
    "id": "1e5187a4-4385-40b2-bc81-876782ec2d15",
    "metadata": {},
    "outputs": [
@@ -424,7 +423,7 @@
        "4                     58       2               40 2025-11-10 08:22:26  "
       ]
      },
-     "execution_count": 53,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 7,
    "id": "3c63b4cd-ed2a-45f4-9cb3-fb9cd7fe0a0d",
    "metadata": {},
    "outputs": [
@@ -515,7 +514,7 @@
        "4                     58       2               40 2025-11-10 08:22:26"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -527,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 8,
    "id": "fea47e97-9fb2-4974-beaf-12ac55d8a4aa",
    "metadata": {},
    "outputs": [
@@ -556,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 9,
    "id": "2bd56bb1-e669-4a96-9b81-10fd598e8ca6",
    "metadata": {},
    "outputs": [
@@ -588,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 10,
    "id": "bd76959e-5526-4cf5-a7c5-48010ef096c4",
    "metadata": {},
    "outputs": [
@@ -618,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 11,
    "id": "092219f7-39de-4537-a6b1-408a80b3204e",
    "metadata": {},
    "outputs": [],
@@ -634,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 12,
    "id": "065c4ada-e50b-4b78-b7f2-013b95b7c3ee",
    "metadata": {},
    "outputs": [
@@ -660,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 13,
    "id": "d08c507a-bbc3-49cd-99b9-eda4d956837c",
    "metadata": {},
    "outputs": [
@@ -754,7 +753,7 @@
        "2                360  "
       ]
      },
-     "execution_count": 61,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -810,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 14,
    "id": "421203dd-4a78-4533-93b1-b8094d6210c1",
    "metadata": {},
    "outputs": [
@@ -856,7 +855,7 @@
        "6               708 2025-11-10 14:45:39  2025-11-10"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -875,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 15,
    "id": "86f1a44e-52b6-4365-9257-2a004ca0fe41",
    "metadata": {},
    "outputs": [
@@ -969,7 +968,7 @@
        "2                360  "
       ]
      },
-     "execution_count": 63,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1025,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 16,
    "id": "8d08c6d0-2310-422d-a10a-dc3a2b038520",
    "metadata": {},
    "outputs": [
@@ -1110,7 +1109,7 @@
        "2               60             100                 381                360  "
       ]
      },
-     "execution_count": 65,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1121,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 17,
    "id": "2c87ff2e-19e4-42ac-a70d-13334cb52ee4",
    "metadata": {},
    "outputs": [
@@ -1223,7 +1222,7 @@
        "2                 381                360                 21  "
       ]
      },
-     "execution_count": 67,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1249,7 +1248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 18,
    "id": "6200cae9-2e69-4afc-8451-1016bb6c629c",
    "metadata": {},
    "outputs": [
@@ -1327,7 +1326,7 @@
        "delta_reaction_ms           1.000000  "
       ]
      },
-     "execution_count": 70,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1338,7 +1337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 19,
    "id": "d431ce59-5b1f-4689-b437-8115b89fe216",
    "metadata": {},
    "outputs": [
@@ -1386,7 +1385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 20,
    "id": "fdd59d40-feff-49fb-b832-3b107e68c0d0",
    "metadata": {},
    "outputs": [
@@ -1429,7 +1428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 21,
    "id": "36f95ccb-cd6a-4161-90cb-d65be0066dea",
    "metadata": {},
    "outputs": [
@@ -1472,7 +1471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 22,
    "id": "c694e051-dc1d-4b4e-b9c8-8a4bea810397",
    "metadata": {},
    "outputs": [
@@ -1520,7 +1519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 24,
    "id": "e54d018d-6d36-40b6-b3f8-a94df547b73d",
    "metadata": {},
    "outputs": [
@@ -1538,8 +1537,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Slope: -2.7699999999999996\n",
-      "Intercept: 519.5999999999999\n"
+      "Slope: -0.5799999999999998\n",
+      "Intercept: 90.39999999999996\n"
      ]
     }
    ],
@@ -1563,13 +1562,13 @@
     "plt.grid(True)\n",
     "plt.show()\n",
     "\n",
-    "print(\"Slope:\", model.coef_[0])\n",
-    "print(\"Intercept:\", model.intercept_)"
+    "print(\"Slope:\", model_math_time.coef_[0])\n",
+    "print(\"Intercept:\", model_math_time.intercept_)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 25,
    "id": "02cdb496-64d7-44bd-ae93-fe080a6229f3",
    "metadata": {},
    "outputs": [
@@ -1587,8 +1586,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Slope: -2.7699999999999996\n",
-      "Intercept: 519.5999999999999\n"
+      "Slope: 1.5999999999999999\n",
+      "Intercept: -247.99999999999997\n"
      ]
     }
    ],
@@ -1612,9 +1611,17 @@
     "plt.grid(True)\n",
     "plt.show()\n",
     "\n",
-    "print(\"Slope:\", model.coef_[0])\n",
-    "print(\"Intercept:\", model.intercept_)"
+    "print(\"Slope:\", model_math_acc.coef_[0])\n",
+    "print(\"Intercept:\", model_math_acc.intercept_)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce3a4d30-4659-4d82-944b-ebcfe2d5dcfe",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
